Fixed extra white space around page. Adjusted size of text and images with the change.

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,16 @@ body {
   font-family: 'Ibm Plex';
 }
 
+#root {
+  width: 100%;
+}
+
 .app {
   flex: 1;
   display: flex;
   flex-direction: column;
 }
+
 
 .content {
   flex: 1;
