--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,8 @@
 
 .copyright {
     position: relative;
-    padding: 10px 0;
-    font-size: 10px;
+    padding: 16px 0;
+    font-size: 16px;
     text-align: center;
 }
 
@@ -10,8 +10,8 @@
     content: "";
     position: absolute;
     top: 0;
-    left: 20%;
-    right: 20%;
+    left: 5%;
+    right: 5%;
     height: 1px;
     background: linear-gradient(to right, transparent, #e0e0e0, transparent);
 }
