--- a/src/components/QuantitySelector.css
+++ b/src/components/QuantitySelector.css
@@ -11,7 +11,7 @@
     background-color: transparent;
     border: transparent;
     color: black;
-    font-size: 12px;
+    font-size: 20px;
     cursor: pointer;
 }
 
@@ -29,6 +29,7 @@
     text-transform: uppercase;
     font-family: "IBM Plex";
     cursor: pointer;
+    font-size: 16px;
 }
 
 .add-to-cart:hover {
