--- a/src/pages/ProductPages.css
+++ b/src/pages/ProductPages.css
@@ -20,8 +20,13 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    max-width: 350px;
+    max-width: 600px;
     width: 100%;
+    font-size: 26px;
+}
+
+.product-title {
+    font-weight: bold;
 }
 
 .product-price-rating {
@@ -29,11 +34,12 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 30px;
+    font-size: 22px;
 }
 
 .product-price {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 26px;
 }
 
 .product-rating {
